--- a/src/App.scss
+++ b/src/App.scss
@@ -10,21 +10,37 @@
   .body-container {
     height: 85vh;
     display: flex;
+    width: 99%;
+    overflow-x: auto;
     flex-direction: row;
-    .add-btn {
-      display: flex;
-      -moz-box-align: center;
-      align-items: center;
+    .add-list-btn {
       cursor: pointer;
       border-radius: 3px;
       height: 36px;
       margin-left: 8px;
-      width: 300px;
+      width: 270px;
       padding-left: 10px;
       padding-right: 10px;
       opacity: 1;
       color: white;
-      background-color: rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        background-color: #fff;
+      p{
+        margin-bottom: 0;
+        color: black;
+        background-color: rgba(0, 0, 0, 0.15); 
+        box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
+        padding: 6px 8px 2px;
+      }
+      input {
+        width: 270px;
+        box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
+        overflow: hidden;
+        margin-top: 5px;
+        padding: 7px 0 7px 5px; 
+        outline: currentcolor none medium;
+        border: medium none;
+      }
     }
   }
 }
