--- a/src/components/eachList/index.scss
+++ b/src/components/eachList/index.scss
@@ -22,11 +22,16 @@ background-color: rgb(244, 245, 247);
     border-bottom: 2px solid rgba(0,0,0,0.3);
     box-shadow:0px 1px 4px black;
     padding: 5px;
+    position: relative;
     .el-text {
         max-width: calc(100% - 45px);
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+    }
+    span {
+        position: absolute;
+        right: 5%;
     }
 }
 .ei-container {
